--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,56 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*::after,
+*::before {
+    box-sizing: border-box;
 }
+
+html,
+body {
+    overflow-x: hidden;
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+    background-color: #141822;
+}
+
+a {
+    font-size: 18px;
+    font-weight: 400;
+}
+
+p {
+    font-weight: 400;
+}
+
+/* bootstrap overide classs start */
+a {
+    text-decoration: none;
+    display: inline-block;
+}
+
+h2,
+h4,
+h6,
+ul,
+ol,
+p {
+    margin-bottom: 0;
+}
+
+ul,
+ol {
+    padding-left: 0;
+    list-style-type: none;
+}
+
+.container {
+    max-width: 1242px;
+}
+
+/* bootstrap overide classs end */
