--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -7,7 +7,7 @@
     top: 50px;
     left: 50%;
     transform: translateX(-50%);
-    z-index: 9;
+    z-index: 99;
 }
 
 .header-nav {
@@ -19,17 +19,34 @@
 
 .header-left {
     padding-left: 50px;
+    padding-right: 2rem;
 
     nav {
         gap: 70px;
+
+        a {
+            &:hover {
+                color: #5151FF;
+            }
+        }
     }
 }
 
 .header-right {
+    display: flex;
+    align-items: center;
     padding-right: 35px;
+    justify-content: space-between;
+    padding-left: 2rem;
 
     nav {
         gap: 50px;
+
+        a {
+            &:hover {
+                color: #5151FF;
+            }
+        }
     }
 }
 
@@ -37,6 +54,47 @@
     width: 1520px;
 }
 
+.header-icon {
+    a {
+        height: 46px;
+        width: 46px;
+        background-color: rgba(255, 255, 255, 0.1);
+        text-align: center;
+        line-height: 46px;
+        border-radius: 50%;
+
+        &:hover {
+            background-color: rgba(255, 255, 255, 0.4);
+            color: #fff !important;
+        }
+    }
+
+    gap: 1rem !important;
+}
+
+.header-logo {
+    border: 8px solid #141822;
+    border-radius: 50%;
+}
+
+.header-twitter {
+    height: 54px;
+    width: 156px;
+    line-height: 54px !important;
+    text-align: center;
+    background-color: #5151FF;
+    font-size: 18px;
+    line-height: 27px;
+    color: #FFFFFF;
+    border-radius: 50px;
+    transition: all .3s;
+    margin-right: 1rem;
+
+    &:hover {
+        background-color: #3636ec;
+        color: #FFFFFF;
+    }
+}
 
 .header-mobile-box {
     position: absolute;
@@ -46,6 +104,7 @@
     z-index: 9;
     padding: 24px 0;
     border-bottom: 1px solid #585858;
+    z-index: 999;
 }
 
 .header-mobile-logo {
@@ -56,14 +115,14 @@
     }
 }
 
-.header-mobile-wallet {
-    button {
-        height: 28px;
-        font-size: 10px;
-        line-height: 15px;
-        padding: 0 1rem;
-    }
-}
+// .header-mobile-wallet {
+//     button {
+//         height: 28px;
+//         font-size: 10px;
+//         line-height: 15px;
+//         padding: 0 1rem;
+//     }
+// }
 
 
 .header-mobile-handburger {
